chore: create installers on pull requests, but not publish
This allows us to catch changes that break our installer builds before
merging the problematic changes.

As a way to simplify the CI configuration files, this commit introduces
an `installers-all` Makefile target that builds all installers.

This commit also replaces all the `cp -rf` calls with `cp -RLf` in
Makefile to avoid some weird hard link Appveyor issues.

See: https://github.com/resin-io/etcher/pull/1078
See: https://github.com/resin-io/etcher/pull/1354
Signed-off-by: Juan Cruz Viotti <jviotti@openmailbox.org>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,7 @@ test_script:
   - npm --version
   - make sanity-checks
   - cmd: npm test
+  - cmd: make installers-all
 
 deploy_script:
   - cmd: .\scripts\ci\deploy-appveyor.bat
