--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,9 @@ install:
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      ./scripts/build/docker/run-command.sh -r "${TARGET_ARCH}" -s "${PWD}" -c "make sanity-checks && xvfb-run --server-args=$XVFB_ARGS npm test";
+      ./scripts/build/docker/run-command.sh -r "${TARGET_ARCH}" -s "${PWD}" -c "make sanity-checks && xvfb-run --server-args=$XVFB_ARGS npm test && make installers-all";
     else
-      make sanity-checks && npm test;
+      make sanity-checks && npm test && make installers-all;
     fi
 
 deploy:
